--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -30,7 +30,7 @@
 								<div class="input-groups" style="float: right;">
 
 									<input type="text" id="searchName"
-										class="forms-controls countrycode" Style="border-radius: 4px;"
+										class="forms-controls countrycode" Style="border-radius: 4px; opacity: 0.6;"
 										placeholder="Nama User" /> <span class="input-group-btn">
 									</span>
 								</div>
