--- a/src/main/resources/static/css/plugins/main.css
+++ b/src/main/resources/static/css/plugins/main.css
@@ -267,7 +267,7 @@ label-s {
     border: 1px solid #ccc;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    font-style: oblique;
+    font-style: italic;
 }
 
 
