--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -5,8 +5,8 @@
 <!-- <th:block layout:decorator ="/admin/layout :: head"></th:block> -->
 <link rel="stylesheet" th:href="@{/css/plugins/main.css}"/>
 <link rel="stylesheet" th:href="@{/css/plugins/main-user.css}"/>
+<link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
 <script src="/js/user.js"></script>
-
 </head>
 <body>
 	<div id="page-wrapper">
@@ -18,7 +18,7 @@
 				<div class="row">
 
 					<div class="col-lg-12">
-						<div class="col-md-4" style="padding-top: 20px;">
+						<div class="col-md-4 col" style="padding-top: 30px;">
 							<h4 style="text-decoration: none; margin-left: -15px;">User</h4>
 						</div>
 
@@ -57,15 +57,15 @@
 												</label-s>
 												<input type="text" name="name" value=""
 													placeholder="Ketik Nama Lengkap" class="form-controls"
-													id="name" required maxlength="80" size="30">
+													id="name" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Email </label-s>
-												<input type="email" name="username" value=""
+												<input type="email" name="username" value="" 
 													placeholder="Ketik Email" class="form-controls" id="username"
-													required maxlength="80" size="30">
+													required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
@@ -73,7 +73,7 @@
 												</label-s>
 												<input type="text" name="phone" value=""
 													placeholder="Ketik Nomor Telepon" class="form-controls"
-													id="phone" required maxlength="80" size="30">
+													id="phone" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 
@@ -81,7 +81,7 @@
 												<label-s style="margin-left: 30px;"> Password </label-s>
 												<input type="password" name="plainPassword" value=""
 													placeholder="Ketik Password" class="form-controls"
-													id="plainPassword" required maxlength="80" size="30">
+													id="plainPassword" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 											<!-- penting to change -->
@@ -106,13 +106,12 @@
 							<table id="surveyerTable"
 								class="table table-bordred table-striped center">
 								<thead class="center">
-									<th>No</th>
+									<th class="sorting_disabled">No</th>
 									<th>Nama</th>
 									<th>Phone</th>
 									<th>Email</th>
 									<th>Total <br> Lapangan</br></th>
-									<th>Latest <br /> Update
-									</th>
+									<th>Latest <br/>Update</th>
 									<th></th>
 								</thead>
 								<tbody>
@@ -154,6 +153,6 @@
 		</div>
 	</div>
 
-
+<div th:replace="/admin/fragment/footer:: footer"></div>
 </body>
 </html>
