--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" th:href="@{/css/plugins/main.css}" />
 <link rel="stylesheet" th:href="@{/css/plugins/main-user.css}" />
 <script src="/js/user.js"></script>
+	<script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>
 
 </head>
 <body>
