--- a/src/main/resources/templates/admin/page/view-lapangan.html
+++ b/src/main/resources/templates/admin/page/view-lapangan.html
@@ -3,7 +3,8 @@
 <head>
 <title>Availaball</title>
 <link rel="stylesheet" th:href="@{/css/plugins/view-field.css}" />
-
+    	<script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>
+    	
 </head>
 <body>
 	<div id="page-wrapper">
