--- a/src/main/resources/templates/admin/page/edit-field.html
+++ b/src/main/resources/templates/admin/page/edit-field.html
@@ -11,7 +11,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCegjS81MOvtXounku2rnlJlggMKv0tv9w&callback=showmap">
     </script>
     <script src="js/OpenLayers.js"></script>
-
+    <script src="js/date.min.js"></script>
 
     <script src="js/jquery-position-picker.debug.js"></script>
 <script type="text/javascript" src="/js/infobox.js"></script>
