--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -57,7 +57,7 @@
 												</label-s>
 												<input type="text" name="name" value=""
 													placeholder="Ketik Nama Lengkap" class="form-controls"
-													id="name" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													id="name" maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 
@@ -73,7 +73,7 @@
 												</label-s>
 												<input type="text" name="phone" value=""
 													placeholder="Ketik Nomor Telepon" class="form-controls"
-													id="phone" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													id="phone"  maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 
 											</div>
 
@@ -82,7 +82,6 @@
 												<input type="password" name="plainPassword" value=""
 													placeholder="Ketik Password" class="form-controls"
 													id="plainPassword" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
-
 											</div>
 											<!-- penting to change -->
 											<div class="actions">
@@ -110,8 +109,8 @@
 									<th>Nama</th>
 									<th>Phone</th>
 									<th>Email</th>
-									<th>Total <br> Lapangan</br></th>
-									<th>Latest <br/>Update</th>
+									<th>Total<br>Lapangan</br></th>
+									<th>Latest<br/>Update</th>
 									<th></th>
 								</thead>
 								<tbody>
