--- a/src/main/resources/static/css/plugins/main.css
+++ b/src/main/resources/static/css/plugins/main.css
@@ -80,8 +80,9 @@ display :none;
 .col{
 	padding-right:unset;
 }
-.buts{
-		width:7%!important;
+.buts {
+    width: 7%!important;
+    height: 60px!important;
 }
 .drop{
 	width:5%!important;
