--- a/src/main/resources/templates/admin/page/index.html
+++ b/src/main/resources/templates/admin/page/index.html
@@ -3,11 +3,10 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Availaball</title>
-<!--   -->
-<!-- <th:block th:replace="/admin/layout :: head"></th:block> -->
 <link rel="stylesheet" th:href="@{/css/plugins/list-field.css}" />
 <link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
 <link rel="stylesheet" th:href="@{/css/plugins/main.css}" />
+
 <script src="/js/futsalfield.js"></script>
 </head>
 <body>
@@ -77,8 +76,7 @@
 											<li><a href="#" data-value="Jakarta Barat">Jakarta
 													Barat</a></li>
 											<li><a href="#" data-value="Jakarta">Jakarta</a></li>
-											<li><a href="#" data-value="Jakarta Utara">Jakarta
-													Utara</a></li>
+											<li><a href="#" data-value="Jakarta Utara">Jakarta Utara</a></li>
 										</ul>
 									</div>
 								</div>
