--- a/src/main/resources/templates/admin/page/user.html
+++ b/src/main/resources/templates/admin/page/user.html
@@ -2,11 +2,20 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>User</title>
-<!-- <th:block layout:decorator ="/admin/layout :: head"></th:block> -->
 <link rel="stylesheet" th:href="@{/css/plugins/main.css}"/>
 <link rel="stylesheet" th:href="@{/css/plugins/main-user.css}"/>
 <link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />
+<link rel="stylesheet" href="/parsleyjs/dist/error.css">
 <script src="/js/user.js"></script>
+<script src="/parsleyjs/dist/parsley.min.js"></script>
+<script src="/parsleyjs/dist/i18n/id.js"></script>
+
+<script>
+$(document).ready(function(){
+	$('form').parsley();
+});
+</script>
+
 </head>
 <body>
 	<div id="page-wrapper">
@@ -64,8 +73,8 @@
 											<div class="form-group has-feedback" class="form-create">
 												<label-s style="margin-left: 30px;"> Email </label-s>
 												<input type="email" name="username" value="" 
-													placeholder="Ketik Email" class="form-controls" id="username"
-													required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													placeholder="Ketik Email" class="form-controls" required data-parsley-type="email" data-parsley-trigger="keyup" id="username"
+													 maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 											</div>
 
 											<div class="form-group has-feedback" class="form-create">
@@ -81,7 +90,7 @@
 												<label-s style="margin-left: 30px;"> Password </label-s>
 												<input type="password" name="plainPassword" value=""
 													placeholder="Ketik Password" class="form-controls"
-													id="plainPassword" required maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
+													id="plainPassword" maxlength="80" size="30" style="font-style: italic; opacity:0.6;">
 											</div>
 											<!-- penting to change -->
 											<div class="actions">
@@ -153,5 +162,8 @@
 	</div>
 
 <div th:replace="/admin/fragment/footer:: footer"></div>
+
+
+
 </body>
 </html>
