--- a/src/main/resources/templates/admin/page/index.html
+++ b/src/main/resources/templates/admin/page/index.html
@@ -31,7 +31,7 @@
 
 											<input type="text" id="searchName"
 												class="form-control countrycode"
-												Style="border-radius: 4px; width: 268px;"
+												style="border-radius: 4px; width: 268px; font-style: italic; font-size: 13px; font-family: roboto; opacity:0.6;"
 												placeholder="Nama Lapangan" /> <span
 												class="input-group-btn"> </span>
 										</div>
@@ -43,8 +43,7 @@
 											style="margin-top: 148.5px !important;">
 											<div class="modal-content" id="modal_content">
 												<div class="modal-header" id="modal_header">
-													<!--   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button> -->
-													<p class="modal-title " id="modal_lables">Are you sure
+												<p class="modal-title " id="modal_lables">Are you sure
 														want to delete it?</p>
 												</div>
 
@@ -54,10 +53,7 @@
 															class="btn btn-primary">Delete</button>
 														<button type="button" id="button_cancel"
 															class="btn btn-default" data-dismiss="modal">Cancel</button>
-															
-															
-															
-															
+																		
 													</div>
 												</div>
 											</div>
@@ -71,7 +67,7 @@
 										<input type="text"
 											class="form-control countrycode dropdown-toggle"
 											placeholder="Lokasi"
-											style="width: 177px; border-radius: 4px; margin-left: 115px;" />
+											style="width: 177px; border-radius: 4px; margin-left: 115px; font-size: 13px; font-family: roboto; font-style: italic; opacity:0.6; " />
 										<ul class="dropdown-menu">
 											<li><a href="#" data-value="Jakarta Barat">Jakarta
 													Barat</a></li>
