--- a/src/main/resources/templates/admin/page/edit-field.html
+++ b/src/main/resources/templates/admin/page/edit-field.html
@@ -11,7 +11,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCegjS81MOvtXounku2rnlJlggMKv0tv9w&callback=showmap">
     </script>
     <script src="js/OpenLayers.js"></script>
-
+    <script src="js/date.min.js"></script>
 
     <script src="js/jquery-position-picker.debug.js"></script>
 <script type="text/javascript" src="/js/infobox.js"></script>
@@ -47,26 +47,12 @@
 							document.getElementById('latitude').value = [latLng.lat()]
 						    $("#longitude").html(document.getElementById('longitude').value = [latLng.lng()]);
 							}
-<<<<<<< HEAD
 							function back(){
 							 $('#map-container').hide();
 							 $('#button-save').show();
 							 $("#edit").show();
 							}
 							function showmap() {
-=======
-
-							function back(){
-
-							 $('#map-container').hide();
-							 $('#button-save').show();
-							 $("#edit").show();
-
-							}
-
-							function showmap() {
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 							var secheltLoc = new google.maps.LatLng(-6.205119831877469,106.82968864194243);
 						    var myMapOptions = {
 						                     zoom: 15
@@ -82,15 +68,7 @@
 						                    visible: true,
 						                     animation: google.maps.Animation.DROP
 						                });
-<<<<<<< HEAD
 						    
-=======
-
-
-
-						    
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 						    var boxText = document.createElement("div");
 						                boxText.style.cssText = "background-color: transparent; border: 2px solid #transparent;border-radius: 25px;cursor: pointer; margin-bottom: 22px;text-align: center;";
 						                boxText.innerHTML = '<button class="btn pick-location" id="pick-location" onClick="pick()">Pick Location</button>';  
@@ -118,11 +96,6 @@
 							    updateMarkerPosition(marker.getPosition());
 							 	  console.log("success");
 							 	});
-<<<<<<< HEAD
-=======
-
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 						  
 							 	theMap.addListener('dblclick', function(e) {
 						          placeMarkerAndPanTo(e.latLng, theMap);
@@ -131,10 +104,6 @@
 						        });
 						      
 						      function placeMarkerAndPanTo(latLng, theMap) {
-<<<<<<< HEAD
-=======
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 						        theMap.panTo(latLng);
 						    	marker.setPosition(latLng);
 						    }
@@ -146,30 +115,16 @@
 					          }, 3000);
 					          console.log('set center');
 					        });*/
-<<<<<<< HEAD
 						        var ib = new InfoBox(myOptions);
 							    ib.open(theMap, marker);
-=======
-
-						        var ib = new InfoBox(myOptions);
-							    ib.open(theMap, marker);
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 							   $('#map-container').show();
 							   $("#edit").hide();
 							     $('#button-save').hide();
 								window.dispatchEvent(new Event('resize'));
 							
 						}
-<<<<<<< HEAD
 								var latInput = document.getElementById('lat');
 								var longInput = document.getElementById('long');
-=======
-
-								var latInput = document.getElementById('lat');
-								var longInput = document.getElementById('long');
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 								function pick(){
 									 $('#button-save').show();
 								 $('#map-container').hide();
@@ -177,11 +132,6 @@
 								 
 								window.dispatchEvent(new Event('resize'));
 								}
-<<<<<<< HEAD
-=======
-
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 						console.log(pick);
     </script> 
             </div>
@@ -216,10 +166,6 @@
 						            
 						            reader.onload = function (e) {
 						                $('#field-img').attr('src', e.target.result);
-<<<<<<< HEAD
-=======
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 						            }
 						            
 						            reader.readAsDataURL(input.files[0]);
@@ -228,34 +174,18 @@
 						    
 						    $("#update-img").change(function(){
 						    	var oFile = document.getElementById("update-img").files[0]; 
-<<<<<<< HEAD
-=======
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 					            if (oFile.size > 200000 && oFile.size > 10000) 
 					            {
 					          
 					                return;
 					            }
 						        readURL(this);
-<<<<<<< HEAD
 						    });		
-=======
-
-						    });		
-
-
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 var _URL = window.URL || window.webkitURL;
 $(document).on('change','#update-img' , function(){    
     var file, img;
     if ((file = this.files[0])) {
         img = new Image();
-<<<<<<< HEAD
-=======
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
         img.onload = function () {
         	if(this.width>360 && this.height>180){
         	
@@ -263,21 +193,12 @@ $(document).on('change','#update-img' , function(){
         	       alert("Ukuran gambar melebihi 360 x 180");
         	}
         	else{
-<<<<<<< HEAD
-=======
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
         	}
      
         };
         img.src = _URL.createObjectURL(file);
     }
 });
-<<<<<<< HEAD
-=======
-
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 												</script>
 			        </div>
 
@@ -308,19 +229,11 @@ $(document).on('change','#update-img' , function(){
 
                                   <!-- Map icon -->
                         <div class="col-lg-4 map2 lefted" id="maps" style="margin-top: -9px;padding-right: unset;" >
-<<<<<<< HEAD
 
 <input type="text" name='nama_lokasi' id='nama_lokasi'  hidden="hidden">
  
 <input type="text" name='latitude' id='latitude' hidden="hidden">
 
-=======
-
-<input type="text" name='nama_lokasi' id='nama_lokasi'  hidden="hidden">
- 
-<input type="text" name='latitude' id='latitude' hidden="hidden">
-
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 <label name='longitude' id='longitude' value=""></label> 
 
 
@@ -358,7 +271,6 @@ $(document).on('change','#update-img' , function(){
 							<div class="control-group" id="fields">
 										<label class="control-label label-color" for="field1">Telepon</label>
 										
-<<<<<<< HEAD
 										<div class="controls" >
 											<form role="form" autocomplete="off">
 												<div class="entry input-group col-lg-4 in" th:each="phn, iterStat : ${phone}" style="width: 200px;" onclick="input()">
@@ -429,28 +341,6 @@ console.log(inputValues)
 });	*/
 }	
 </script>
-=======
-										<div class="controls" th:each="phn, iterStat : ${phone}">
-											<form role="form" autocomplete="off">
-												<div class="entry input-group col-lg-4 in" style="width: 200px;">
-												<div class="bound" id="field_telepon">												
-														<input class="form-control" name="result[0]"  type="tel" pattern="[0-9]{14}"
-															id="phone_no" placeholder="Phone Number" maxlength="14" th:value="${phn}" />	
-
-														<span class="input-group-btn ">
-															<button class="btn btn-success btn-add button_1" type="button" id="green-round">
-																<span th:if="${iterStat.last and iterStat.index < 2}" class="icon_add"></span>
-																<!-- <span th:if="${iterStat.last}" class="icon_add"></span> -->
-																<span th:if="not ${iterStat.last}" class="icon_minus btn-remove"></span>
-																<span th:if="${iterStat.index == 2}" class="icon_minus btn-remove"></span>
-															</button>
-														</span>
-												</div>													
-												</div>
-											</form>
-										</div>
-										<input type="text" th:value="${view.phone}" size="50" >
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
 
 									</div>
 						
@@ -482,10 +372,6 @@ console.log(inputValues)
                     </div>
             
 
-<<<<<<< HEAD
-=======
-						
->>>>>>> d61895029fb9d6e54579a3beeb613a06f3f1b15c
              </div>
                   
              
