--- a/src/main/resources/templates/admin/page/index.html
+++ b/src/main/resources/templates/admin/page/index.html
@@ -62,20 +62,32 @@
 								</div>
 
 								<div class="col-md-4 " id="searchLocation"
-									style="padding-top: 30px; margin-left: -141px;">
-									<div class="input-group dropdown">
-										<input type="text"
-											class="form-control countrycode dropdown-toggle"
-											placeholder="Lokasi"
-											style="width: 177px; border-radius: 4px; margin-left: 115px; font-size: 13px; font-family: roboto; font-style: italic; opacity:0.6; " />
-										<ul class="dropdown-menu">
-											<li><a href="#" data-value="Jakarta Barat">Jakarta
-													Barat</a></li>
-											<li><a href="#" data-value="Jakarta">Jakarta</a></li>
-											<li><a href="#" data-value="Jakarta Utara">Jakarta Utara</a></li>
-										</ul>
-									</div>
-								</div>
+                                    style="padding-top: 30px; margin-left: -141px;">
+<!--                                     <div class="input-group dropdown">
+                                        <input type="text"
+                                            class="form-control countrycode dropdown-toggle"
+                                            placeholder="Lokasi"
+                                            style="width: 177px; border-radius: 4px; margin-left: 115px;" />
+                                            <ul class="dropdown-menu">
+                                            <li><a href="#" data-value="Jakarta Barat">Jakarta
+                                                    Barat</a></li>
+                                            <li><a href="#" data-value="Jakarta">Jakarta</a></li>
+                                            <li><a href="#" data-value="Jakarta Utara">Jakarta
+                                                    Utara</a></li>
+                                        </ul>
+                                    </div> -->
+                                <select class="form-control countrycode dropdown-toggle" style="width: 177px; border-radius: 4px; opacity: 0.6; font-size: 13px; margin-left: 115px;" id="lokasi" placeholder="Lokasi">
+                                    <option selected="" disabled selected hidden >Location</option>
+                                    <option>Jakarta Barat</option>
+                                    <option>Jakarta Utara</option>
+                                    <option>Jakarta Timur</option>
+                                    <option>Jakarta Pusat</option>
+                                    <option>Jakarta Selatan</option>
+                                    <option>Tangerang</option>
+                                    <option>Depok</option>
+                                    <option>Bogor</option>
+                                </select>
+                                </div>
 							</div>
 							<div class="col-lg-12 ">
 								<div class="table-responsive">
