--- a/src/main/resources/templates/admin/page/edit-user.html
+++ b/src/main/resources/templates/admin/page/edit-user.html
@@ -18,7 +18,7 @@
 							<p class="header">Edit User</p>
 							<form method="post" accept-charset="utf-8">
 
-								<label-s style="margin-left: 30px;"> Nama Lengkap2 </label-s>
+								<label-s style="margin-left: 30px;"> Nama Lengkap</label-s>
 								<div class="form-group has-feedback">
 									<input type="text" name="login" value=""
 										placeholder="Ketik Nama Lengkap" class="form-controls"
