--- a/src/main/resources/templates/admin/fragment/top.html
+++ b/src/main/resources/templates/admin/fragment/top.html
@@ -33,27 +33,26 @@
                         <a href="#" style="float: left;"> Happy Working</a>    
                     </li>
                 </div> 
-                <div ">
+                <div>
                     <li>
                         <a class ="tops " href="#" th:text="${session.mySessionAttributeAccount.name}"></a>
                     </li>
-                </div>
-            
+                </div>           
             </div>
             <div class="collapse navbar-collapse" >
-                <ul class="nav navbar-nav side-nav" id="list">
+                 <ul class="nav navbar-nav side-nav" id="list">
                     <li>
                         <img class="logo " src="/img/availaball.png"/>
                     </li>
                 	<div class="list" id="list">
                     <li>
-                       <a class="btn btns-primary btn-block" th:href="@{/admin/index}">Dashboard<i class="icon-dashboard"></i></a>
+                       <a class="btned btns-primary btned-blocks btned-default" th:href="@{/admin/index}">Dashboard<i class="icon-dashboard"></i></a>
                     </li>
                     <li>
-                       <a class="btn btns-primary btn-block" th:href="@{/admin/user}">User <i class="icon-user_icon"></i></a>
+                       <a class="btned btns-primary btned-blocks btned-default" th:href="@{/admin/user}">User <i class="icon-user_icon"></i></a>
                     </li>
                     <li>
-                       <a class="btn btns-primary btn-block" th:href="@{/admin/map}">Map <i class="icon-maps"></i></a>
+                       <a class="btned btns-primary btned-blocks btned-default" th:href="@{/admin/map}">Map <i class="icon-maps"></i></a>
                     </li>
                 </div>
                 </ul>
